re PR c++/45401 ([C++0x] reference collapsing and reference qualifiers)

PR c++/45401
	* decl.c (grokdeclarator): Don't change type when adding rvalue ref
	to another reference type.

From-SVN: r174260